Done home screen layout. Gameplay screen done image layout

--- a/Lab1/Info.plist
+++ b/Lab1/Info.plist
@@ -41,9 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSContactsUsageDescription</key>
-	<string>abc</string>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PoplarStd.otf</string>
+		<string>StencilStd.otf</string>
+	</array>
 </dict>
 </plist>
